HelloUltraviolet/Fixtures/RejectedSource/Polymorphism/SuperclassCycle/Source/Main.uv
//! Rejected polymorphism specimen for a cyclic superclass relation.

internal class CycleA <: CycleB {
}

internal class CycleB <: CycleA {
}
